[project]
name = "ros-bridge"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "yokoba", email = "31529581+yokoba@users.noreply.github.com" }
]
dependencies = [
    "roslibpy>=1.7.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ros_bridge"]
